--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1"
   }
