--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
+  "name": "euterpe-server",
+  "version": "1.0.0",
+  "description": "Euterpe's Place Server",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.0.3",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
-    "fs": "^0.0.1-security",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
